compiler/analyse_syntaxique.output
Terminaux inutilisés dans la grammaire

   tENTIEREXP
   tERROR


Grammaire

    0 $accept: C $end

    1 $@1: %empty

    2 C: $@1 Fonctions

    3 Fonctions: Main
    4          | Fonction Fonctions

    5 $@2: %empty

    6 Main: tINT tMAIN $@2 tPO Params tPF Body

    7 $@3: %empty

    8 Fonction: Function_type tVAR $@3 tPO Params tPF Body

    9 Function_type: tINT
   10              | tINT tMUL

   11 Params: %empty
   12       | Param SuiteParams

   13 Param: Param_type tVAR

   14 Param_type: tINT
   15           | tINT tMUL

   16 SuiteParams: tVIRGULE Param SuiteParams
   17            | %empty

   18 Body: tAO Instructions Return tAF

   19 Instructions: Instruction Instructions
   20             | %empty

   21 Instruction: Aff
   22            | If
   23            | While
   24            | Print
   25            | Decl
   26            | Invocation tPV

   27 Decl: Type Valeur SuiteDecl tPV

   28 SuiteDecl: tVIRGULE Valeur SuiteDecl
   29          | %empty

   30 Type: tINT
   31     | tCONST tINT
   32     | tINT tMUL

   33 $@4: %empty

   34 Valeur: tVAR $@4 tAFFECTATION E
   35       | tVAR

   36 Aff: tVAR tAFFECTATION E tPV
   37    | tMUL tVAR tAFFECTATION E tPV

   38 E: tENTIER
   39  | tVAR
   40  | E tADD E
   41  | E tMUL E
   42  | E tSUB E
   43  | E tDIV E
   44  | tSUB E
   45  | Invocation
   46  | tPO E tPF
   47  | tAPPERSAND tVAR
   48  | tMUL tVAR

   49 $@5: %empty

   50 $@6: %empty

   51 $@7: %empty

   52 $@8: %empty

   53 $@9: %empty

   54 If: tIF tPO Cond tPF $@5 tAO $@6 Instructions $@7 tAF $@8 $@9 Else

   55 $@10: %empty

   56 $@11: %empty

   57 Else: tELSE tAO $@10 Instructions tAF $@11
   58     | %empty
   59     | tELSE If

   60 $@12: %empty

   61 $@13: %empty

   62 $@14: %empty

   63 $@15: %empty

   64 While: tWHILE tPO $@12 Cond tPF $@13 tAO $@14 Instructions tAF $@15

   65 Cond: E tEGAL E
   66     | E tDIFF E
   67     | E tLT E
   68     | E tGT E
   69     | E tLTE E
   70     | E tGTE E
   71     | E tAND E
   72     | E tOR E
   73     | tNOT Cond
   74     | E

   75 $@16: %empty

   76 Invocation: tVAR tPO $@16 Args tPF

   77 Args: Arg SuiteArgs
   78     | %empty

   79 Arg: E

   80 SuiteArgs: tVIRGULE Arg SuiteArgs
   81          | %empty

   82 Print: tPRINT tPO E tPF tPV

   83 Return: tRETURN E tPV


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tENTIER (258) 38
tENTIEREXP (259)
tADD (260) 40
tSUB (261) 42 44
tMUL (262) 10 15 32 37 41 48
tDIV (263) 43
tPO (264) 6 8 46 54 64 76 82
tPF (265) 6 8 46 54 64 76 82
tAO (266) 18 54 57 64
tAF (267) 18 54 57 64
tERROR (268)
tAPPERSAND (269) 47
tPV (270) 26 27 36 37 82 83
tVIRGULE (271) 16 28 80
tAFFECTATION (272) 34 36 37
tEGAL (273) 65
tDIFF (274) 66
tLT (275) 67
tGT (276) 68
tGTE (277) 70
tLTE (278) 69
tMAIN (279) 6
tINT (280) 6 9 10 14 15 30 31 32
tPRINT (281) 82
tRETURN (282) 83
tOR (283) 72
tAND (284) 71
tIF (285) 54
tELSE (286) 57 59
tWHILE (287) 64
tCONST (288) 31
tVAR (289) 8 13 34 35 36 37 39 47 48 76
tNOT (290) 73


Non-terminaux, suivis des règles où ils apparaissent

$accept (36)
    à gauche: 0
C (37)
    à gauche: 2, à droite: 0
$@1 (38)
    à gauche: 1, à droite: 2
Fonctions (39)
    à gauche: 3 4, à droite: 2 4
Main (40)
    à gauche: 6, à droite: 3
$@2 (41)
    à gauche: 5, à droite: 6
Fonction (42)
    à gauche: 8, à droite: 4
$@3 (43)
    à gauche: 7, à droite: 8
Function_type (44)
    à gauche: 9 10, à droite: 8
Params (45)
    à gauche: 11 12, à droite: 6 8
Param (46)
    à gauche: 13, à droite: 12 16
Param_type (47)
    à gauche: 14 15, à droite: 13
SuiteParams (48)
    à gauche: 16 17, à droite: 12 16
Body (49)
    à gauche: 18, à droite: 6 8
Instructions (50)
    à gauche: 19 20, à droite: 18 19 54 57 64
Instruction (51)
    à gauche: 21 22 23 24 25 26, à droite: 19
Decl (52)
    à gauche: 27, à droite: 25
SuiteDecl (53)
    à gauche: 28 29, à droite: 27 28
Type (54)
    à gauche: 30 31 32, à droite: 27
Valeur (55)
    à gauche: 34 35, à droite: 27 28
$@4 (56)
    à gauche: 33, à droite: 34
Aff (57)
    à gauche: 36 37, à droite: 21
E (58)
    à gauche: 38 39 40 41 42 43 44 45 46 47 48, à droite: 34 36 37
    40 41 42 43 44 46 65 66 67 68 69 70 71 72 74 79 82 83
If (59)
    à gauche: 54, à droite: 22 59
$@5 (60)
    à gauche: 49, à droite: 54
$@6 (61)
    à gauche: 50, à droite: 54
$@7 (62)
    à gauche: 51, à droite: 54
$@8 (63)
    à gauche: 52, à droite: 54
$@9 (64)
    à gauche: 53, à droite: 54
Else (65)
    à gauche: 57 58 59, à droite: 54
$@10 (66)
    à gauche: 55, à droite: 57
$@11 (67)
    à gauche: 56, à droite: 57
While (68)
    à gauche: 64, à droite: 23
$@12 (69)
    à gauche: 60, à droite: 64
$@13 (70)
    à gauche: 61, à droite: 64
$@14 (71)
    à gauche: 62, à droite: 64
$@15 (72)
    à gauche: 63, à droite: 64
Cond (73)
    à gauche: 65 66 67 68 69 70 71 72 73 74, à droite: 54 64 73
Invocation (74)
    à gauche: 76, à droite: 26 45
$@16 (75)
    à gauche: 75, à droite: 76
Args (76)
    à gauche: 77 78, à droite: 76
Arg (77)
    à gauche: 79, à droite: 77 80
SuiteArgs (78)
    à gauche: 80 81, à droite: 77 80
Print (79)
    à gauche: 82, à droite: 24
Return (80)
    à gauche: 83, à droite: 18


État 0

    0 $accept: . C $end

    $défaut  réduction par utilisation de la règle 1 ($@1)

    C    aller à l'état 1
    $@1  aller à l'état 2


État 1

    0 $accept: C . $end

    $end  décalage et aller à l'état 3


État 2

    2 C: $@1 . Fonctions

    tINT  décalage et aller à l'état 4

    Fonctions      aller à l'état 5
    Main           aller à l'état 6
    Fonction       aller à l'état 7
    Function_type  aller à l'état 8


État 3

    0 $accept: C $end .

    $défaut  accepter


État 4

    6 Main: tINT . tMAIN $@2 tPO Params tPF Body
    9 Function_type: tINT .
   10              | tINT . tMUL

    tMUL   décalage et aller à l'état 9
    tMAIN  décalage et aller à l'état 10

    $défaut  réduction par utilisation de la règle 9 (Function_type)


État 5

    2 C: $@1 Fonctions .

    $défaut  réduction par utilisation de la règle 2 (C)


État 6

    3 Fonctions: Main .

    $défaut  réduction par utilisation de la règle 3 (Fonctions)


État 7

    4 Fonctions: Fonction . Fonctions

    tINT  décalage et aller à l'état 4

    Fonctions      aller à l'état 11
    Main           aller à l'état 6
    Fonction       aller à l'état 7
    Function_type  aller à l'état 8


État 8

    8 Fonction: Function_type . tVAR $@3 tPO Params tPF Body

    tVAR  décalage et aller à l'état 12


État 9

   10 Function_type: tINT tMUL .

    $défaut  réduction par utilisation de la règle 10 (Function_type)


État 10

    6 Main: tINT tMAIN . $@2 tPO Params tPF Body

    $défaut  réduction par utilisation de la règle 5 ($@2)

    $@2  aller à l'état 13


État 11

    4 Fonctions: Fonction Fonctions .

    $défaut  réduction par utilisation de la règle 4 (Fonctions)


État 12

    8 Fonction: Function_type tVAR . $@3 tPO Params tPF Body

    $défaut  réduction par utilisation de la règle 7 ($@3)

    $@3  aller à l'état 14


État 13

    6 Main: tINT tMAIN $@2 . tPO Params tPF Body

    tPO  décalage et aller à l'état 15


État 14

    8 Fonction: Function_type tVAR $@3 . tPO Params tPF Body

    tPO  décalage et aller à l'état 16


État 15

    6 Main: tINT tMAIN $@2 tPO . Params tPF Body

    tINT  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 11 (Params)

    Params      aller à l'état 18
    Param       aller à l'état 19
    Param_type  aller à l'état 20


État 16

    8 Fonction: Function_type tVAR $@3 tPO . Params tPF Body

    tINT  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 11 (Params)

    Params      aller à l'état 21
    Param       aller à l'état 19
    Param_type  aller à l'état 20


État 17

   14 Param_type: tINT .
   15           | tINT . tMUL

    tMUL  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 14 (Param_type)


État 18

    6 Main: tINT tMAIN $@2 tPO Params . tPF Body

    tPF  décalage et aller à l'état 23


État 19

   12 Params: Param . SuiteParams

    tVIRGULE  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 17 (SuiteParams)

    SuiteParams  aller à l'état 25


État 20

   13 Param: Param_type . tVAR

    tVAR  décalage et aller à l'état 26


État 21

    8 Fonction: Function_type tVAR $@3 tPO Params . tPF Body

    tPF  décalage et aller à l'état 27


État 22

   15 Param_type: tINT tMUL .

    $défaut  réduction par utilisation de la règle 15 (Param_type)


État 23

    6 Main: tINT tMAIN $@2 tPO Params tPF . Body

    tAO  décalage et aller à l'état 28

    Body  aller à l'état 29


État 24

   16 SuiteParams: tVIRGULE . Param SuiteParams

    tINT  décalage et aller à l'état 17

    Param       aller à l'état 30
    Param_type  aller à l'état 20


État 25

   12 Params: Param SuiteParams .

    $défaut  réduction par utilisation de la règle 12 (Params)


État 26

   13 Param: Param_type tVAR .

    $défaut  réduction par utilisation de la règle 13 (Param)


État 27

    8 Fonction: Function_type tVAR $@3 tPO Params tPF . Body

    tAO  décalage et aller à l'état 28

    Body  aller à l'état 31


État 28

   18 Body: tAO . Instructions Return tAF

    tMUL    décalage et aller à l'état 32
    tINT    décalage et aller à l'état 33
    tPRINT  décalage et aller à l'état 34
    tIF     décalage et aller à l'état 35
    tWHILE  décalage et aller à l'état 36
    tCONST  décalage et aller à l'état 37
    tVAR    décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 20 (Instructions)

    Instructions  aller à l'état 39
    Instruction   aller à l'état 40
    Decl          aller à l'état 41
    Type          aller à l'état 42
    Aff           aller à l'état 43
    If            aller à l'état 44
    While         aller à l'état 45
    Invocation    aller à l'état 46
    Print         aller à l'état 47


État 29

    6 Main: tINT tMAIN $@2 tPO Params tPF Body .

    $défaut  réduction par utilisation de la règle 6 (Main)


État 30

   16 SuiteParams: tVIRGULE Param . SuiteParams

    tVIRGULE  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 17 (SuiteParams)

    SuiteParams  aller à l'état 48


État 31

    8 Fonction: Function_type tVAR $@3 tPO Params tPF Body .

    $défaut  réduction par utilisation de la règle 8 (Fonction)


État 32

   37 Aff: tMUL . tVAR tAFFECTATION E tPV

    tVAR  décalage et aller à l'état 49


État 33

   30 Type: tINT .
   32     | tINT . tMUL

    tMUL  décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 30 (Type)


État 34

   82 Print: tPRINT . tPO E tPF tPV

    tPO  décalage et aller à l'état 51


État 35

   54 If: tIF . tPO Cond tPF $@5 tAO $@6 Instructions $@7 tAF $@8 $@9 Else

    tPO  décalage et aller à l'état 52


État 36

   64 While: tWHILE . tPO $@12 Cond tPF $@13 tAO $@14 Instructions tAF $@15

    tPO  décalage et aller à l'état 53


État 37

   31 Type: tCONST . tINT

    tINT  décalage et aller à l'état 54


État 38

   36 Aff: tVAR . tAFFECTATION E tPV
   76 Invocation: tVAR . tPO $@16 Args tPF

    tPO           décalage et aller à l'état 55
    tAFFECTATION  décalage et aller à l'état 56


État 39

   18 Body: tAO Instructions . Return tAF

    tRETURN  décalage et aller à l'état 57

    Return  aller à l'état 58


État 40

   19 Instructions: Instruction . Instructions

    tMUL    décalage et aller à l'état 32
    tINT    décalage et aller à l'état 33
    tPRINT  décalage et aller à l'état 34
    tIF     décalage et aller à l'état 35
    tWHILE  décalage et aller à l'état 36
    tCONST  décalage et aller à l'état 37
    tVAR    décalage et aller à l'état 38

    $défaut  réduction par utilisation de la règle 20 (Instructions)

    Instructions  aller à l'état 59
    Instruction   aller à l'état 40
    Decl          aller à l'état 41
    Type          aller à l'état 42
    Aff           aller à l'état 43
    If            aller à l'état 44
    While         aller à l'état 45
    Invocation    aller à l'état 46
    Print         aller à l'état 47


État 41

   25 Instruction: Decl .

    $défaut  réduction par utilisation de la règle 25 (Instruction)


État 42

   27 Decl: Type . Valeur SuiteDecl tPV

    tVAR  décalage et aller à l'état 60

    Valeur  aller à l'état 61


État 43

   21 Instruction: Aff .

    $défaut  réduction par utilisation de la règle 21 (Instruction)


État 44

   22 Instruction: If .

    $défaut  réduction par utilisation de la règle 22 (Instruction)


État 45

   23 Instruction: While .

    $défaut  réduction par utilisation de la règle 23 (Instruction)


État 46

   26 Instruction: Invocation . tPV

    tPV  décalage et aller à l'état 62


État 47

   24 Instruction: Print .

    $défaut  réduction par utilisation de la règle 24 (Instruction)


État 48

   16 SuiteParams: tVIRGULE Param SuiteParams .

    $défaut  réduction par utilisation de la règle 16 (SuiteParams)


État 49

   37 Aff: tMUL tVAR . tAFFECTATION E tPV

    tAFFECTATION  décalage et aller à l'état 63


État 50

   32 Type: tINT tMUL .

    $défaut  réduction par utilisation de la règle 32 (Type)


État 51

   82 Print: tPRINT tPO . E tPF tPV

    tENTIER     décalage et aller à l'état 64
    tSUB        décalage et aller à l'état 65
    tMUL        décalage et aller à l'état 66
    tPO         décalage et aller à l'état 67
    tAPPERSAND  décalage et aller à l'état 68
    tVAR        décalage et aller à l'état 69

    E           aller à l'état 70
    Invocation  aller à l'état 71


État 52

   54 If: tIF tPO . Cond tPF $@5 tAO $@6 Instructions $@7 tAF $@8 $@9 Else

    tENTIER     décalage et aller à l'état 64
    tSUB        décalage et aller à l'état 65
    tMUL        décalage et aller à l'état 66
    tPO         décalage et aller à l'état 67
    tAPPERSAND  décalage et aller à l'état 68
    tVAR        décalage et aller à l'état 69
    tNOT        décalage et aller à l'état 72

    E           aller à l'état 73
    Cond        aller à l'état 74
    Invocation  aller à l'état 71


État 53

   64 While: tWHILE tPO . $@12 Cond tPF $@13 tAO $@14 Instructions tAF $@15

    $défaut  réduction par utilisation de la règle 60 ($@12)

    $@12  aller à l'état 75


État 54

   31 Type: tCONST tINT .

    $défaut  réduction par utilisation de la règle 31 (Type)


État 55

   76 Invocation: tVAR tPO . $@16 Args tPF

    $défaut  réduction par utilisation de la règle 75 ($@16)

    $@16  aller à l'état 76


État 56

   36 Aff: tVAR tAFFECTATION . E tPV

    tENTIER     décalage et aller à l'état 64
    tSUB        décalage et aller à l'état 65
    tMUL        décalage et aller à l'état 66
    tPO         décalage et aller à l'état 67
    tAPPERSAND  décalage et aller à l'état 68
    tVAR        décalage et aller à l'état 69

    E           aller à l'état 77
    Invocation  aller à l'état 71


État 57

   83 Return: tRETURN . E tPV

    tENTIER     décalage et aller à l'état 64
    tSUB        décalage et aller à l'état 65
    tMUL        décalage et aller à l'état 66
    tPO         décalage et aller à l'état 67
    tAPPERSAND  décalage et aller à l'état 68
    tVAR        décalage et aller à l'état 69

    E           aller à l'état 78
    Invocation  aller à l'état 71


État 58

   18 Body: tAO Instructions Return . tAF

    tAF  décalage et aller à l'état 79


État 59

   19 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 19 (Instructions)


État 60

   34 Valeur: tVAR . $@4 tAFFECTATION E
   35       | tVAR .

    tAFFECTATION  réduction par utilisation de la règle 33 ($@4)
    $défaut      réduction par utilisation de la règle 35 (Valeur)

    $@4  aller à l'état 80


État 61

   27 Decl: Type Valeur . SuiteDecl tPV

    tVIRGULE  décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 29 (SuiteDecl)

    SuiteDecl  aller à l'état 82


État 62

   26 Instruction: Invocation tPV .

    $défaut  réduction par utilisation de la règle 26 (Instruction)


État 63

   37 Aff: tMUL tVAR tAFFECTATION . E tPV

    tENTIER     décalage et aller à l'état 64
    tSUB        décalage et aller à l'état 65
    tMUL        décalage et aller à l'état 66
    tPO         décalage et aller à l'état 67
    tAPPERSAND  décalage et aller à l'état 68
    tVAR        décalage et aller à l'état 69

    E           aller à l'état 83
    Invocation  aller à l'état 71


État 64

   38 E: tENTIER .

    $défaut  réduction par utilisation de la règle 38 (E)


État 65

   44 E: tSUB . E

    tENTIER     décalage et aller à l'état 64
    tSUB        décalage et aller à l'état 65
    tMUL        décalage et aller à l'état 66
    tPO         décalage et aller à l'état 67
    tAPPERSAND  décalage et aller à l'état 68
    tVAR        décalage et aller à l'état 69

    E           aller à l'état 84
    Invocation  aller à l'état 71


État 66

   48 E: tMUL . tVAR

    tVAR  décalage et aller à l'état 85


État 67

   46 E: tPO . E tPF

    tENTIER     décalage et aller à l'état 64
    tSUB        décalage et aller à l'état 65
    tMUL        décalage et aller à l'état 66
    tPO         décalage et aller à l'état 67
    tAPPERSAND  décalage et aller à l'état 68
    tVAR        décalage et aller à l'état 69

    E           aller à l'état 86
    Invocation  aller à l'état 71


État 68

   47 E: tAPPERSAND . tVAR

    tVAR  décalage et aller à l'état 87


État 69

   39 E: tVAR .
   76 Invocation: tVAR . tPO $@16 Args tPF

    tPO  décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 39 (E)


État 70

   40 E: E . tADD E
   41  | E . tMUL E
   42  | E . tSUB E
   43  | E . tDIV E
   82 Print: tPRINT tPO E . tPF tPV

    tADD  décalage et aller à l'état 88
    tSUB  décalage et aller à l'état 89
    tMUL  décalage et aller à l'état 90
    tDIV  décalage et aller à l'état 91
    tPF   décalage et aller à l'état 92


État 71

   45 E: Invocation .

    $défaut  réduction par utilisation de la règle 45 (E)


État 72

   73 Cond: tNOT . Cond

    tENTIER     décalage et aller à l'état 64
    tSUB        décalage et aller à l'état 65
    tMUL        décalage et aller à l'état 66
    tPO         décalage et aller à l'état 67
    tAPPERSAND  décalage et aller à l'état 68
    tVAR        décalage et aller à l'état 69
    tNOT        décalage et aller à l'état 72

    E           aller à l'état 73
    Cond        aller à l'état 93
    Invocation  aller à l'état 71


État 73

   40 E: E . tADD E
   41  | E . tMUL E
   42  | E . tSUB E
   43  | E . tDIV E
   65 Cond: E . tEGAL E
   66     | E . tDIFF E
   67     | E . tLT E
   68     | E . tGT E
   69     | E . tLTE E
   70     | E . tGTE E
   71     | E . tAND E
   72     | E . tOR E
   74     | E .

    tADD   décalage et aller à l'état 88
    tSUB   décalage et aller à l'état 89
    tMUL   décalage et aller à l'état 90
    tDIV   décalage et aller à l'état 91
    tEGAL  décalage et aller à l'état 94
    tDIFF  décalage et aller à l'état 95
    tLT    décalage et aller à l'état 96
    tGT    décalage et aller à l'état 97
    tGTE   décalage et aller à l'état 98
    tLTE   décalage et aller à l'état 99
    tOR    décalage et aller à l'état 100
    tAND   décalage et aller à l'état 101

    $défaut  réduction par utilisation de la règle 74 (Cond)


État 74

   54 If: tIF tPO Cond . tPF $@5 tAO $@6 Instructions $@7 tAF $@8 $@9 Else

    tPF  décalage et aller à l'état 102


État 75

   64 While: tWHILE tPO $@12 . Cond tPF $@13 tAO $@14 Instructions tAF $@15

    tENTIER     décalage et aller à l'état 64
    tSUB        décalage et aller à l'état 65
    tMUL        décalage et aller à l'état 66
    tPO         décalage et aller à l'état 67
    tAPPERSAND  décalage et aller à l'état 68
    tVAR        décalage et aller à l'état 69
    tNOT        décalage et aller à l'état 72

    E           aller à l'état 73
    Cond        aller à l'état 103
    Invocation  aller à l'état 71


État 76

   76 Invocation: tVAR tPO $@16 . Args tPF

    tENTIER     décalage et aller à l'état 64
    tSUB        décalage et aller à l'état 65
    tMUL        décalage et aller à l'état 66
    tPO         décalage et aller à l'état 67
    tAPPERSAND  décalage et aller à l'état 68
    tVAR        décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 78 (Args)

    E           aller à l'état 104
    Invocation  aller à l'état 71
    Args        aller à l'état 105
    Arg         aller à l'état 106


État 77

   36 Aff: tVAR tAFFECTATION E . tPV
   40 E: E . tADD E
   41  | E . tMUL E
   42  | E . tSUB E
   43  | E . tDIV E

    tADD  décalage et aller à l'état 88
    tSUB  décalage et aller à l'état 89
    tMUL  décalage et aller à l'état 90
    tDIV  décalage et aller à l'état 91
    tPV   décalage et aller à l'état 107


État 78

   40 E: E . tADD E
   41  | E . tMUL E
   42  | E . tSUB E
   43  | E . tDIV E
   83 Return: tRETURN E . tPV

    tADD  décalage et aller à l'état 88
    tSUB  décalage et aller à l'état 89
    tMUL  décalage et aller à l'état 90
    tDIV  décalage et aller à l'état 91
    tPV   décalage et aller à l'état 108


État 79

   18 Body: tAO Instructions Return tAF .

    $défaut  réduction par utilisation de la règle 18 (Body)


État 80

   34 Valeur: tVAR $@4 . tAFFECTATION E

    tAFFECTATION  décalage et aller à l'état 109


État 81

   28 SuiteDecl: tVIRGULE . Valeur SuiteDecl

    tVAR  décalage et aller à l'état 60

    Valeur  aller à l'état 110


État 82

   27 Decl: Type Valeur SuiteDecl . tPV

    tPV  décalage et aller à l'état 111


État 83

   37 Aff: tMUL tVAR tAFFECTATION E . tPV
   40 E: E . tADD E
   41  | E . tMUL E
   42  | E . tSUB E
   43  | E . tDIV E

    tADD  décalage et aller à l'état 88
    tSUB  décalage et aller à l'état 89
    tMUL  décalage et aller à l'état 90
    tDIV  décalage et aller à l'état 91
    tPV   décalage et aller à l'état 112


État 84

   40 E: E . tADD E
   41  | E . tMUL E
   42  | E . tSUB E
   43  | E . tDIV E
   44  | tSUB E .

    tMUL  décalage et aller à l'état 90
    tDIV  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 44 (E)


État 85

   48 E: tMUL tVAR .

    $défaut  réduction par utilisation de la règle 48 (E)


État 86

   40 E: E . tADD E
   41  | E . tMUL E
   42  | E . tSUB E
   43  | E . tDIV E
   46  | tPO E . tPF

    tADD  décalage et aller à l'état 88
    tSUB  décalage et aller à l'état 89
    tMUL  décalage et aller à l'état 90
    tDIV  décalage et aller à l'état 91
    tPF   décalage et aller à l'état 113


État 87

   47 E: tAPPERSAND tVAR .

    $défaut  réduction par utilisation de la règle 47 (E)


État 88

   40 E: E tADD . E
